<resources>
    <string name="app_name">nammuk_app</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--My정보에 들어갈 String-->
    <string name="Cancel">취소</string>
    <string name="UserName">User1</string>
    <string name="Change">수정</string>
    <string name="MyInfo">MY 정보</string>
    <string name="Sex">성별</string>
    <string name="Age">나이</string>
    <string name="Height">키</string>
    <string name="Weight">몸무게</string>
    <string name="BMI">BMI</string>
    <string name="Obesity">비만</string>
    <string name="OneDayCalorie">일일 권장 칼로리</string>
    <string name="UserCalorie">2600KCAL</string>
    <string name="UserClass">천사</string>
    <string name="CurrentExp">현재 경험치</string>
    <string name="AchieveCount">업적달성횟수</string>
    <string name="UserAchieveCountTotal">250회</string>
    <string name="UserSex">남성</string>
    <string name="UserAge">27세</string>
    <string name="UserHeight">180CM</string>
    <string name="UserWeight">87KG</string>
    <string name="UserBMI">26.85</string>
    <string name="UserAchievePercent">50%</string>
    <string name="UserAchieveCountCurrent">75회</string>

    <!--My정보 수정에 들어갈 String-->
    <string name="MyInfoChange">신체 정보 수정</string>
    <string name="Man">남자</string>
    <string name="Woman">여자</string>
    <string name="Complete">완료</string>
    <string name="Nickname">닉네임</string>

    <!--남묵음식에 들어갈 String-->
    <string name="NammukFood">남먹 음식</string>
    <string name="MissionProgress">251번째 미션 진행중...</string>
    <string name="KcalProgress">510KCAL / 780KCAL</string>
    <string name="Brand">BURGERKING</string>
    <string name="FName">콰트로 치즈 와퍼</string>
    <string name="KcalPerOne">780 KCAL / 1개</string>
    <string name="ClassInfo">계급 정보</string>

    <!--Setting에 들어갈 String-->
    <string name="Setting">설정</string>
    <string name="LockingScreen">잠금화면 표시</string>
    <string name="ON">ON</string>
    <string name="OFF">OFF</string>
    <string name="DietSaying">다이어트 문구 추가</string>
    <string name="UserSaying">보아라.. 치킨이다..</string>
    <string name="NammukAlarm">남겨먹자 알람</string>
    <string name="AlarmSetting">알람 시간 설정</string>
    <string name="pedometer">자동 만보기 모드</string>
    <string name="InitRecord">기록 초기화</string>
    <string name="UserAlarmHint">19:00</string>

    <!--About Us에 들어갈 String-->
    <string name="AboutUs">ABOUT US</string>
    <string name="Copyright">Copyrights by</string>
    <string name="LSH">Lee Seung Hee</string>
    <string name="MailLSH">kevinlee5228@gmail.com</string>
    <string name="KKT">Kim Kyung Tae</string>
    <string name="MailKKT">speed9640@naver.com</string>
    <string name="AboutUsText1">오류 발생, 수정 요청 시</string>
    <string name="AboutUsText2">위의 연락처로 연락주세요:)</string>

    <!--메인화면에 들어갈 String-->
    <string name="LeftKcal">1300KCAL</string>
    <string name="SpentKcal">1300KCAL</string>
    <string name="PigKcal">752KCAL</string>
    <string name="KcalPercent">50%</string>

    <!--로그인화면에 들어갈 String-->
    <string name="RegisterFirst">아직 회원가입을 안하셨나요?</string>
    <string name="Login">로그인</string>
    <string name="ID">아이디</string>
    <string name="Password">비밀번호</string>

    <!--가입화면에 들어갈 String-->
    <string name="UserRegister">회원가입</string>
    <string name="IDEmail">아이디(E-MAIL)</string>
    <string name="PasswordSix">비밀번호(최소6글자)</string>
    <string name="PasswordConfirm">비밀번호 확인</string>
    <string name="DuplicationTest">중복검사</string>
    <string name="Next">다음</string>
    <string name="BodyInfo">신체정보</string>

    <!--My식단에 들어갈 string-->
    <string name="MyFood">MY 식단</string>
    <string name="Add">추가</string>
    <string name="Delete">삭제</string>

    <!--My식단추가에 들어갈 string-->
    <string name="MyFoodAdd">MY 식단 추가</string>
    <string name="SearchHint">검색어를 입력하세요</string>
    <string name="Register">등록</string>

    <!--My식단기록에 들어갈 string-->
    <string name="MyFoodRecord">나만의 식단 기록</string>
    <string name="FoodName">음식 이름</string>
    <string name="KTFood">(ex. 경태표부대찌개)</string>
    <string name="UnitName">단위 이름(ex. 그릇)</string>
    <string name="GramHint">1단위는 몇그램?(ex. 150g)</string>
    <string name="MinUnit">최소 단위</string>
    <string name="Calorie">칼로리</string>
    <string name="CalorieHint">(ex. 200)</string>

    <!--fabfood에 들어갈 string-->
    <string name="fabfoodToday">오늘</string>
    <string name="fabfoodMorning">아침</string>
    <string name="fabfoodLunch">점심</string>
    <string name="fabfoodDinner">저녁</string>
    <string name="fabfoodSupper">간식/기타</string>
    <string name="fabfoodTotal">TOTAL</string>


    <!--My운동에 들어갈 string-->
    <string name="MyExercise">MY 운동</string>
    <string name="MyExerciseAdd">MY 운동 추가</string>
    <string name="MyExerciseRecord">나만의 운동 기록</string>
    <string name="ExerciseName">운동 이름</string>
    <string name="NeedCalorie">칼로리 소모량</string>
    <string name="SHExercise">(ex.승희특제버핏테스트)</string>
    <string name="ExerciseUnitName">단위 이름(ex. 세트 or 분)</string>
    <string name="UnitNumber">1단위는 몇 회?(ex.15회)</string>
    <string name="CalUnit">(ex. 40KCAL)</string>

    <!--fabexercise에 들어갈 string-->
    <string name="fabexerciseToday">오늘</string>
    <string name="fabexerciseAnaerobic">무산소운동</string>
    <string name="fabexerciseAerobic">유산소운동</string>
    <string name="fabexerciseTotal">TOTAL</string>

    <string name="action_settings">Settings</string>

    <!--dropdown menu에 들어갈 string-->
    <string-array name="android_dropdown_arrays">
        <item>유산소운동</item>
        <item>무산소운동</item>
    </string-array>

    <!--dropdown menu에 들어갈 string-->
    <string-array name="android_dropdown_arrays2">
        <item>아침</item>
        <item>점심</item>
        <item>저녁</item>
        <item>간식</item>
    </string-array>

    <!--fabexercisecalendar에 들어갈 string-->
    <string name="fabexercisecalendar">달력</string>

    <!--fatsecret에 들어갈 string-->
    <string name="load_more">더보기</string>
    <string name="action_search">검색</string>
    <string name="action_clear">취소</string>


</resources>
