<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kennethelee.nammuk.MainActivity">

    <Button
        android:id="@+id/CompleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/wrap_blackborder"
        android:text="@string/Complete"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RWeight" />

    <RadioButton
        android:id="@+id/MaleRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="109dp"
        android:text="@string/Man"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/textView53" />

    <RadioButton
        android:id="@+id/FemaleRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="-10dp"
        android:text="@string/Woman"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/MaleRadioButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/MaleRadioButton"
        app:layout_constraintHorizontal_bias="1.0" />

    <EditText
        android:id="@+id/RAge"
        android:layout_width="215dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/wrap_blackborder"
        android:ems="10"
        android:hint="@string/Age"
        android:inputType="number"
        android:paddingLeft="10dp"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MaleRadioButton" />

    <EditText
        android:id="@+id/RHeight"
        android:layout_width="215dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="38dp"
        android:background="@drawable/wrap_blackborder"
        android:ems="10"
        android:hint="@string/Height"
        android:inputType="number"
        android:paddingLeft="10dp"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RAge" />

    <EditText
        android:id="@+id/RWeight"
        android:layout_width="215dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="34dp"
        android:background="@drawable/wrap_blackborder"
        android:ems="10"
        android:hint="@string/Weight"
        android:inputType="number"
        android:paddingLeft="10dp"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RHeight" />

    <TextView
        android:id="@+id/textView52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BodyInfo"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView21" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="270dp"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/progresssticktwo" />

    <TextView
        android:id="@+id/textView53"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/Sex"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView52" />

</android.support.constraint.ConstraintLayout>
