<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_aboutus"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/button_cancel_aboutus"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="#ff6161"
        android:text="@string/Cancel"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintLeft_toLeftOf="@+id/toolbar_aboutus"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="143dp"
        android:layout_height="0dp"
        android:layout_marginBottom="11dp"
        android:layout_marginLeft="121dp"
        android:layout_marginStart="121dp"
        android:layout_marginTop="11dp"
        android:gravity="center_vertical|center"
        android:text="@string/AboutUs"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar_aboutus"
        app:layout_constraintLeft_toLeftOf="@+id/button_cancel_aboutus"
        app:layout_constraintTop_toTopOf="@+id/toolbar_aboutus"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="79dp"
        android:layout_marginLeft="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="79dp"
        android:text="@string/Copyright"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView41"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_aboutus"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/LSH"
        android:textColor="#ff6161"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView42"
        app:layout_constraintLeft_toLeftOf="@+id/textView42"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"

        android:layout_marginEnd="63dp"
        android:layout_marginRight="63dp"
        android:text="@string/MailLSH"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView43"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/KKT"
        android:textColor="#ff6161"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView44"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="9dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView44" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="187dp"
        android:text="@string/MailKKT"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/textView42"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/textView45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AboutUsText1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView46"
        android:layout_marginStart="10dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="12dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView46"
        android:layout_marginLeft="10dp" />

    <TextView
        android:id="@+id/textView46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AboutUsText2"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="85dp"
        app:layout_constraintTop_toBottomOf="@+id/textView44"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="85dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
