<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editText_unit"
        android:layout_width="242dp"
        android:layout_height="38dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/wrap_pinkborder_transparent"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/GramHint"
        android:inputType="numberSigned"
        android:selectAllOnFocus="false"
        android:textColorHint="#ff6161"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_unitname" />

    <EditText
        android:id="@+id/editText_calorie"
        android:layout_width="242dp"
        android:layout_height="38dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/wrap_pinkborder_transparent"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/CalorieHint"
        android:inputType="numberSigned"
        android:selectAllOnFocus="false"
        android:textColorHint="#ff6161"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView58" />

    <EditText
        android:id="@+id/editText_unitname"
        android:layout_width="242dp"
        android:layout_height="38dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/wrap_pinkborder_transparent"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/UnitName"
        android:inputType="text"
        android:selectAllOnFocus="false"
        android:textColorHint="#ff6161"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView57" />

    <TextView
        android:id="@+id/textView57"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/MinUnit"
        android:textColor="?attr/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_foodname" />

    <TextView
        android:id="@+id/textView58"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/Calorie"
        android:textColor="?attr/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_unit" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar6"
        android:layout_width="384dp"
        android:layout_height="56dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="-79dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="1.0" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="182dp"
        android:layout_height="57dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:text="@string/MyFoodRecord"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_myfoodaddrecord_cancel"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/Cancel"
        android:textColor="@android:color/white"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView47"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView56"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="64dp"
        android:text="@string/FoodName"
        android:textColor="?attr/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView47" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/guideline5"
        app:layout_constraintGuide_begin="143dp"
        android:orientation="horizontal" />

    <EditText
        android:id="@+id/editText_foodname"
        android:layout_width="242dp"
        android:layout_height="38dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/wrap_pinkborder_transparent"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/KTFood"
        android:inputType="text"
        android:selectAllOnFocus="false"
        android:textColorHint="#ff6161"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/button_myfoodaddrecord_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/wrap_pinkbox"
        android:text="@string/Register"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
