<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/editText_unit"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:background="@drawable/wrap_pinkborder_transparent"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/UnitNumber"
        android:inputType="numberSigned"
        android:selectAllOnFocus="false"
        android:textColorHint="#ff6161"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/editText_calorie"
        app:layout_constraintRight_toRightOf="@+id/editText_unitname"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="75dp"
        app:layout_constraintLeft_toLeftOf="@+id/editText_unitname" />

    <EditText
        android:id="@+id/editText_calorie"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:background="@drawable/wrap_pinkborder_transparent"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/CalUnit"
        android:inputType="numberSigned"
        android:selectAllOnFocus="false"
        android:textColorHint="#ff6161"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/button_myexerciseaddrecord_register"
        app:layout_constraintRight_toRightOf="@+id/editText_unit"
        android:layout_marginTop="36dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="44dp"
        app:layout_constraintLeft_toLeftOf="@+id/editText_unit"
        app:layout_constraintTop_toTopOf="@+id/textView58" />

    <EditText
        android:id="@+id/editText_unitname"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:background="@drawable/wrap_pinkborder_transparent"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/ExerciseUnitName"
        android:inputType="text"
        android:selectAllOnFocus="false"
        android:textColorHint="#ff6161"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/editText_unit"
        app:layout_constraintRight_toRightOf="@+id/editText_exercisename"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="12dp"
        app:layout_constraintLeft_toLeftOf="@+id/editText_exercisename" />

    <TextView
        android:id="@+id/textView57"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MinUnit"
        android:textColor="?attr/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/editText_unitname"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="17dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView58"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NeedCalorie"
        android:textColor="?attr/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/button_myexerciseaddrecord_register"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="96dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar6"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="182dp"
        android:layout_height="57dp"
        android:gravity="center"
        android:text="@string/MyExerciseRecord"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar6" />

    <Button
        android:id="@+id/button_myexerciseaddrecord_cancel"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/Cancel"
        android:textColor="@android:color/white"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar6"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/textView56"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ExerciseName"
        android:textColor="?attr/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/editText_exercisename"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="14dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/guideline5"
        app:layout_constraintGuide_begin="143dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="143dp"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editText_exercisename"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:background="@drawable/wrap_pinkborder_transparent"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/SHExercise"
        android:inputType="text"
        android:selectAllOnFocus="false"
        android:textColorHint="#ff6161"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/editText_unitname"
        android:layout_marginStart="71dp"
        android:layout_marginEnd="71dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="61dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="71dp"
        android:layout_marginRight="71dp" />

    <Button
        android:id="@+id/button_myexerciseaddrecord_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/wrap_pinkbox"
        android:text="@string/Register"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="32dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
